[package]
name = "embedded-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", default-features = false }

serde_json = { version = "1", default-features = false, features = ['alloc'], optional = true }

defmt = { version = "0.3", optional = true, features = ["alloc"] }

[features]

alloc = []
