[package]
name = "embedded-http"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", default-features = false }

serde_json = { version = "1", default-features = false, features = ['alloc'], optional = true }

defmt = { version = "0.3", optional = true, features = ["alloc"] }

embedded-io = { version = "0.3.0", default-features = false }

[features]

alloc = ["embedded-io/alloc", "defmt?/alloc"]

defmt = ["dep:defmt", "embedded-io/defmt"]

[dev-dependencies]

serde = { version = "1" }

serde_json = { version = "1", default-features = false, features = ['alloc'] }
