[package]
name = "embedded-http"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", default-features = false }

serde_json = { version = "1", default-features = false, features = ['alloc'], optional = true }

defmt = { version = "0.3", optional = true, features = ["alloc"] }

embedded-io = { version = "0.6", features = ["alloc"], default-features = false }

chrono = { version = "0.4", default-features = false, features = [] }


itoa = { version = "1.0", default-features = false }


[features]

alloc = ["embedded-io/alloc", "defmt?/alloc"]

defmt = ["dep:defmt", "embedded-io/defmt-03"]

unstable = []

[dev-dependencies]
http = { version = "0.2.9", default-features = false }

serde = { version = "1" }

serde_json = { version = "1", default-features = false, features = ['alloc'] }

embedded-http = { path = ".", features = ["alloc"] }

serde_derive = "1.0.176"

httparse = "1.8.0"

httptest = "0.15.4"