[package]
name = "ensure_no_std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

embedded-http = { path = "../", features = ["alloc", "unstable", "serde_json"]}


cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

alloc-cortex-m = "0.4"

panic-halt = "0.2.0"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"